fixed text align

--- a/hackharvard_frontend/src/index.css
+++ b/hackharvard_frontend/src/index.css
@@ -40,6 +40,7 @@ div {
 #wait_info {
   font-size: 20px;
   max-width: 70%;
+  text-align: center;
 }
 
 
